--- a/src/index.css
+++ b/src/index.css
@@ -15,11 +15,11 @@
 
 a {
   font-weight: 500;
-  color: #646cff;
+  color: #6169ff;
   text-decoration: inherit;
 }
 a:hover {
-  color: #535bf2;
+  color: #5259ed;
 }
 
 body {
